<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".features.recipes_details.view.RecipesDetailsActivity">

        <ImageView
            android:id="@+id/image_view_image"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_image"
            tools:text="Crispy Fish Goujons" />

        <TextView
            android:id="@+id/text_view_head_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_view_name"
            app:layout_constraintTop_toBottomOf="@+id/text_view_name"
            tools:text="with Sweet Potato Wedges and Minted Snap Peas" />

        <TextView
            android:id="@+id/text_view_calories_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/calories"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/text_view_head_line"
            app:layout_constraintTop_toBottomOf="@+id/text_view_head_line" />

        <TextView
            android:id="@+id/text_view_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/text_view_calories_text"
            app:layout_constraintTop_toTopOf="@+id/text_view_calories_text"
            tools:text="516 kcal" />

        <TextView
            android:id="@+id/text_view_carbos_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/carbos"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/text_view_calories_text"
            app:layout_constraintTop_toBottomOf="@+id/text_view_calories_text" />

        <TextView
            android:id="@+id/text_view_carbos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/text_view_carbos_text"
            app:layout_constraintTop_toTopOf="@+id/text_view_carbos_text"
            tools:text="516 kcal" />

        <TextView
            android:id="@+id/text_view_difficulty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/difficulty"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/text_view_carbos_text"
            app:layout_constraintTop_toBottomOf="@+id/text_view_carbos_text" />

        <TextView
            android:id="@+id/text_view_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/text_view_difficulty_text"
            app:layout_constraintTop_toTopOf="@+id/text_view_difficulty_text"
            tools:text="516 kcal" />

        <TextView
            android:id="@+id/text_view_fats_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fats"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/text_view_difficulty_text"
            app:layout_constraintTop_toBottomOf="@+id/text_view_difficulty_text" />

        <TextView
            android:id="@+id/text_view_fats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/text_view_fats_text"
            app:layout_constraintTop_toTopOf="@+id/text_view_fats_text"
            tools:text="516 kcal" />

        <TextView
            android:id="@+id/text_view_proteins_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/proteins"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/text_view_fats_text"
            app:layout_constraintTop_toBottomOf="@+id/text_view_fats_text" />

        <TextView
            android:id="@+id/text_view_proteins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/text_view_proteins_text"
            app:layout_constraintTop_toTopOf="@+id/text_view_proteins_text"
            tools:text="516 kcal" />


        <TextView
            android:id="@+id/text_view_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/proteins"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/text_view_proteins_text"
            app:layout_constraintTop_toBottomOf="@+id/text_view_proteins_text" />

        <TextView
            android:id="@+id/text_view_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/text_view_time_text"
            app:layout_constraintTop_toTopOf="@+id/text_view_time_text"
            tools:text="516 kcal" />

        <TextView
            android:id="@+id/text_view_description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/description"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_time_text"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/text_view_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_description_text"
            app:layout_constraintVertical_bias="0"
            tools:text="There’s nothing like the simple things in life - the smell of freshly cut grass, sitting outside on a nice sunny day, spending time with friends and family. Well here is a recipe that delivers simple culinary pleasures - some nice fresh fish with a crispy crust, crunchy potato wedges and some delightfully sweet sugar snap peas flavoured with cooling mint. Slip into something comfortable and relax into a delicious dinner!" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>